infra/k8s/base/clickhouse-keeper/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: clickhouse-keeper
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: clickhouse-keeper
  policyTypes: [Ingress, Egress]
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: clickhouse
      ports:
        - protocol: TCP
          port: 9181
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: clickhouse-keeper
      ports:
        - protocol: TCP
          port: 9234
  egress:
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: clickhouse-keeper
      ports:
        - protocol: TCP
          port: 9234
